--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Bookmark Exporter",
+  "name": "Twitter Age Restriction Bypass",
   "version": "1.0",
   "host_permissions": ["https://x.com/*"],
   "content_scripts": [
